--- a/style.scss
+++ b/style.scss
@@ -53,7 +53,7 @@ body {
 // == header
 
 .section-header-background-wrapper {
-    background: url(../img/background-1.jpg) no-repeat 50% 50%;
+    background: url(img/background-1.jpg) no-repeat 50% 50%;
     height: 740px;
 }
 
