--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .section-header-background-wrapper {
-  background: url(../img/background-1.jpg) no-repeat 50% 50%;
+  background: url(../buildCompanyLanding/img/background-1.jpg) no-repeat 50% 50%;
   height: 740px;
 }
 
